Increase size of input box for notification message

--- a/adm/style/acp_notify_minecraft_body.html
+++ b/adm/style/acp_notify_minecraft_body.html
@@ -31,7 +31,7 @@
 			<dt><label
 				for="ic_nm_server_pass">{L_ACP_NOTIFY_MINECRAFT_SERVER_PASS}{L_COLON}</label>
 			</dt>
-			<dd><input type="password" class="narrow" 
+			<dd><input type="password" class="narrow"
 					name="ic_nm_server_pass" value="{IC_NM_SERVER_PASS}"/>
 			</dd>
 		</dl>
@@ -39,8 +39,8 @@
 			<dt><label
 				for="ic_nm_server_timeout">{L_ACP_NOTIFY_MINECRAFT_SERVER_TIMEOUT}{L_COLON}</label>
 			</dt>
-			<dd><input type="text" class="tiny" 
-					name="ic_nm_server_timeout" 
+			<dd><input type="text" class="tiny"
+					name="ic_nm_server_timeout"
 					value="{IC_NM_SERVER_TIMEOUT}"/>
 			</dd>
 		</dl>
@@ -49,8 +49,8 @@
 			<dt><label
 				for="ic_nm_server_message">{L_ACP_NOTIFY_MINECRAFT_SERVER_MESSAGE}{L_COLON}</label>
 			</dt>
-			<dd><input type="text" class="hidden" 
-					name="ic_nm_server_message" 
+			<dd><input type="text" class="medium"
+					name="ic_nm_server_message"
 					value="{IC_NM_SERVER_MESSAGE}"/>
 			</dd>
 		</dl>
