--- a/adm/style/acp_notify_minecraft_body.html
+++ b/adm/style/acp_notify_minecraft_body.html
@@ -44,6 +44,15 @@
 					value="{IC_NM_SERVER_TIMEOUT}"/>
 			</dd>
 		</dl>
+		<dl>
+			<dt><label
+				for="ic_nm_forum_id">{L_ACP_NOTIFY_MINECRAFT_FORUM_ID}{L_COLON}</label>
+			</dt>
+			<dd><input type="text" class="tiny"
+					name="ic_nm_forum_id"
+					value="{IC_NM_FORUM_ID}"/>
+			</dd>
+		</dl>
 		<!-- TODO
 		<dl>
 			<dt><label
